# mipet

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_two_motors.py
MiPet_emtion/: .gitignore  lcd_display.py  pi_emotion.py  pi_vision.py  requirements_pi.txt  setup_pi.sh  test_emotion.py  test_lcd.py  test_ttp223.py
MiPet_emtion/model/: encodings.pkl  face_model.pkl
MiPet_emtion/scripts/: test_mediapipe_emotion.py  test_mqtt.py  test_recognition.py
mipet_car/: __init__.py  camera.py  config.py  decision.py  main.py  motor.py  vision_food.py  vision_line.py  vision_sign.py  web_stream.py
models/: README.md
scripts/: download_food_model.py  generate_aruco_marker.py  probe_single_motor.py  setup_pi.sh  stream_camera.py  test_camera.py  test_motor.py  view_stream.py
tests/: test_decision.py  test_motor.py  test_vision_optional.py
